k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lotus-spm
  labels:
    name: lotus-spm
    environment: production
